test/functions/deitz/test_visible2.good
test_visible2.chpl:15: error: unresolved call 'bar(C)'
